syntax = "proto3";

package heremaps;

import "google/api/annotations.proto";

option go_package = "/proto/generated";

service HereMapsService {
  rpc GetCoordinates (HereMapsRequest) returns (CoordinatesResponse) {
    option (google.api.http) = {
      post: "/v1/geocode"
      body: "*"
    };
  }
}

message HereMapsRequest {
  string query = 1;
}

message CoordinatesResponse {
  double latitude = 1;
  double longitude = 2;
}

