syntax = "proto3";

package weathercondition;

option go_package = "/proto/generated";

message WeatherRequest {
  string location = 1;
}

message WeatherResponse {
  string temperature = 1;
  string timezone = 2;
  string condition = 3;

}
service WeatherConditionService {
  rpc GetWeather(WeatherRequest) returns (WeatherResponse);
}